# my-chatbot

./: .gitignore  README.md  index.html  script.js  style.css
.github/workflows/: keep-alive.yml
android_apk/: README.md  build.sh  env_check.txt  os_check.txt  setup_android_cli.sh
android_apk/Pocket Ai Studio/: build.gradle.kts  generate_icons.py  gradle.properties  settings.gradle.kts
android_apk/Pocket Ai Studio/app/: build.gradle.kts  proguard-rules.pro
android_apk/Pocket Ai Studio/app/src/main/: AndroidManifest.xml
android_apk/Pocket Ai Studio/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/: MainActivity.kt  PocketAiApplication.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/ai/arena/: ArenaRanker.kt  ModelArena.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/ai/benchmark/: DeviceBenchmark.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/ai/engine/: AiEngine.kt  ModelRouter.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/ai/features/: FeatureDownloader.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/ai/jni/: LlamaBridge.kt
android_apk/Pocket Ai Studio/app/src/main/java/com/pocketai/studio/di/: AppModule.kt
android_apk/Pocket Ai Studio/app/src/main/res/drawable/: ic_launcher_foreground.xml
android_apk/Pocket Ai Studio/app/src/main/res/values/: strings.xml  themes.xml
android_apk/device info/: placeholder.txt
jules-scratch/verification/: verify_chatbot_ui.py
(+66 files in other folders)
